Sun May 30 03:40:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_tokadd_utf8, parser_tokadd_string): allow NUL
	  containing symbol literals, as well as String#to_sym.
	  [ruby-dev:41447]

Sun May 30 03:03:20 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/rdoc/generator/template/darkfish/classpage.rhtml:
	  fix encoding value of XML declaration. [ruby-dev:41452]

Sun May 30 02:20:26 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* thread.c (RB_GC_SAVE_MACHINE_CONTEXT), gc.c (ruby_gc_stress_start):
	  revert r28078.

Sun May 30 02:21:34 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* ext/zlib/zlib.c (zstream_append_input2): add RB_GC_GUARD.
	  This caused failure when test/csv is executed with GC.stress = true.

Sun May 30 01:25:48 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* thread.c (RB_GC_SAVE_MACHINE_CONTEXT): start GC
	  by switching the thread if gc_stress == true

	* gc.c (ruby_gc_stress_start): ditto.

Sun May 30 00:02:39 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gc.c (force_chain_object, rb_objspace_call_finalizer): delete
	  finalizer entry after corresponding finalizer is executed.
	  This caused SEGV when test/cgi is executed with GC.stress = true.

Sat May 29 23:30:33 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* string.c (str_replace_shared): change embedded state atomically.
	  [ruby-core:29953] [ruby-dev:41456]

Sat May 29 12:56:09 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* encoding.c (rb_filesystem_encindex): avoid infinite require
	  loop. [ruby-core:30467]

Sat May 29 12:05:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/rdoc.rb (RDoc#read_file_contents): take care of BOM.
	  [ruby-dev:41452]

Sat May 29 10:12:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (GC_PROF_TIMER_STOP): regularize `marked' to suppress
	  warnings.

Sat May 29 09:34:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/envutil.rb: fix for --disable-gems.

Sat May 29 09:04:06 2010  Tanaka Akira  <akr@fsij.org>
